--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,8 @@
         <h1 class="text-center">NJU选课助手</h1>
         <div class="text-center mb-4">
             <span>Created by carottx</span> | 
-            <a href="https://github.com/carottX/nju-class" target="_blank">项目主页</a>
+            <a href="https://github.com/carottX/nju-class" target="_blank">项目主页</a> | 
+            欢迎通过<a href="mailto:xuzm0616@gmail.com">邮件</a>或者<a href="https://github.com/carottX/nju-class" target="_blank">Github</a>添加更多红黑榜！
         </div>
         <div class="row">
             <div class="col-md-6">
