Support initial match

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,13 @@
         .card {
             margin-bottom: 20px;
         }
+        .changelog {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 0.8em;
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -24,6 +31,11 @@
             <span>Created by carottx</span> | 
             <a href="https://github.com/carottX/nju-class" target="_blank">项目主页</a> | 
             欢迎通过<a href="mailto:xuzm0616@gmail.com">邮件</a>或者<a href="https://github.com/carottX/nju-class" target="_blank">Github</a>添加更多红黑榜！
+        </div>
+        <div class="changelog">
+            <p>Changelog:</p>
+            <p>v1.0 支持不完全匹配</p>
+            <p>v1.1 教师支持首字母匹配</p>
         </div>
         <div class="row">
             <div class="col-md-6">
