--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,15 @@
             right: 10px;
             font-size: 0.8em;
             text-align: right;
+            max-width: 200px; /* 限制最大宽度 */
+            word-wrap: break-word; /* 自动换行 */
+        }
+        @media (max-width: 768px) {
+            .changelog {
+                position: static;
+                text-align: center;
+                margin-top: 10px;
+            }
         }
     </style>
 </head>
@@ -36,6 +45,7 @@
             <p>Changelog:</p>
             <p>v1.0 支持不完全匹配</p>
             <p>v1.1 教师支持首字母匹配</p>
+            <p>v1.2 支持从nju table上动态拉取，使用json作为数据源，添加更多数据源</p>
         </div>
         <div class="row">
             <div class="col-md-6">
