--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <div class="text-center mb-4">
             <span>Created by carottx</span> | 
             <a href="https://github.com/carottX/nju-class" target="_blank">项目主页</a> | 
-            欢迎通过<a href="mailto:xuzm0616@gmail.com">邮件</a>或者<a href="https://github.com/carottX/nju-class" target="_blank">Github</a>添加更多红黑榜！
+            欢迎通过<a href="mailto:xuzm0616@gmail.com">邮件</a>或者<a href="https://table.nju.edu.cn/external-apps/7aded834-74a2-43cc-b515-fb8e01656ef2/" target="_blank">NJUTable</a>添加更多红黑榜！
         </div>
         <div class="changelog">
             <p>Changelog:</p>
